# animal_names

./: .dockerignore  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  apply-changes.py  check_mypy.py  commit_changes.py  fetch_wiki.py  parse_demo.py  poetry_helper.sh  pyproject.toml  pytest.ini  requirements.txt  run_coverage.sh  run_tests.py  setup.py
.github/workflows/: ci.yml
data/: manifest.json  raw_snapshot.html
reports/: results.xml
src/: __init__.py  cli.py  downloader.py  renderer.py  scraper.py
static/css/: style.css
templates/: base.html.j2  report.html.j2
tests/: __init__.py  conftest.py  test_cli.py  test_downloader.py  test_integration.py  test_load_manifest.py  test_manifest.py  test_renderer.py  test_root_relative_urls.py  test_scraper.py  test_scraper_edge_cases.py
tests/fixtures/: dummy_manifest.json  raw_snapshot.html  sample_table.html  server.py  test_manifest.json  test_raw_snapshot.html
tests/templates/: dummy_report.html.j2
