[tool.poetry]
name = "animal_names"
version = "0.1.0"
description = "A Python application that scrapes Wikipedia's List of animal names, extracts adjective-animal mappings, downloads images, and generates an HTML report."
authors = ["Your Name <amitai1997@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pre-commit = "^2.20.0"
# Add any missing dev dependencies

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "online: marks tests that require internet connection",
    "slow: marks tests that are slow to execute",
]
